--- a/themes/qori/layouts/about/list.html
+++ b/themes/qori/layouts/about/list.html
@@ -9,6 +9,8 @@
       </div>
     </div>
   </div>
+
+
   <!-- background shapes -->
   <img src="{{`images/illustrations/page-title.png`| relURL}}" alt="illustrations" class="bg-shape-1 w-100">
   <img src="{{`images/illustrations/dots-group-sm.svg`| relURL}}" alt="illustrations" class="bg-shape-2">
@@ -19,6 +21,7 @@
 </section>
 <!-- /page title -->
 
+<img src="/images/logo.gif">
 <!-- about -->
 <section class="section pt-5">
   <div class="container">
@@ -101,5 +104,6 @@
   </div>
 </section>
 {{ end }}
+
 
 {{ end }}
