--- a/themes/qori/layouts/partials/header.html
+++ b/themes/qori/layouts/partials/header.html
@@ -12,7 +12,7 @@
         {{ if .HasChildren }}
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-haspopup="true"
-            aria-expanded="false">
+            aria-expanded="false" data-url="{{ .URL | absURL }}">
             {{ .Name }}
           </a>
           <div class="dropdown-menu" >
