--- a/themes/educenter-hugo/layouts/partials/header.html
+++ b/themes/educenter-hugo/layouts/partials/header.html
@@ -14,7 +14,7 @@
         <div class="col-lg-8 text-center text-lg-right">
           <ul class="list-inline">
             <li class="list-inline-item">
-              <a class="text-color mr-3" href="tel:{{ .Site.Params.mobile }}"><strong>{{ i18n "call" | upper }} : </strong> {{ .Site.Params.mobile }}</a></li>
+              <a class="text-color mr-3" href="tel:{{ .Site.Params.phone }}"><strong>{{ i18n "call" | upper }} : </strong> {{ .Site.Params.phone }}</a></li>
             <li class="list-inline-item">
               <a class="text-color" href="mailto:{{ .Site.Params.email }}"><strong>{{ i18n "email" | upper }} : </strong> {{ .Site.Params.email }}</a></li>
           </ul>
