--- a/themes/educenter-hugo/layouts/index.html
+++ b/themes/educenter-hugo/layouts/index.html
@@ -223,10 +223,12 @@
 }(document, 'script', 'facebook-jssdk'));</script>
 
 <!-- Your Chat Plugin code -->
-<div class="fb-customerchat"
-  attribution=setup_tool
-  page_id="109242554213757"
-theme_color="#ffc300">
-</div>
+<section class="section">
+  <div class="fb-customerchat"
+    attribution=setup_tool
+    page_id="109242554213757"
+  theme_color="#ffc300">
+  </div>
+</section>
 
 {{ end }}
