tarte au citron

--- a/themes/educenter-hugo/layouts/partials/footer.html
+++ b/themes/educenter-hugo/layouts/partials/footer.html
@@ -113,19 +113,37 @@
 
 {{ "<!-- google analitycs -->" | safeHTML }}
 {{ with .Site.Params.google_analitycs_id}}
+<link rel="preload" href="/css/tarteaucitron.css?v=20200114" as="style">
+<link rel="preload" href="/tarteaucitron.services.js?v=20200114" as="script">
+<script type="text/javascript" src="/tarteaucitron.js"></script>
 <script>
-  (function (i, s, o, g, r, a, m) {
-    i['GoogleAnalyticsObject'] = r;
-    i[r] = i[r] || function () {
-      (i[r].q = i[r].q || []).push(arguments)
-    }, i[r].l = 1 * new Date();
-    a = s.createElement(o),
-      m = s.getElementsByTagName(o)[0];
-    a.async = 1;
-    a.src = g;
-    m.parentNode.insertBefore(a, m)
-  })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
-  ga('create', '{{ . }}', 'auto');
-  ga('send', 'pageview');
+tarteaucitron.init({
+  "privacyUrl": "", /* Privacy policy url */
+
+  "hashtag": "#tarteaucitron", /* Open the panel with this hashtag */
+  "cookieName": "tarteaucitron", /* Cookie name */
+
+  "orientation": "bottom", /* Banner position (top - bottom) */
+  "showAlertSmall": true, /* Show the small banner on bottom right */
+  "cookieslist": true, /* Show the cookie list */
+
+  "adblocker": false, /* Show a Warning if an adblocker is detected */
+  "AcceptAllCta" : true, /* Show the accept all button when highPrivacy on */
+  "highPrivacy": true, /* Disable auto consent */
+  "handleBrowserDNTRequest": false, /* If Do Not Track == 1, disallow all */
+
+  "removeCredit": false, /* Remove credit link */
+  "moreInfoLink": true, /* Show more info link */
+  "useExternalCss": false, /* If false, the tarteaucitron.css file will be loaded */
+
+  //"cookieDomain": ".my-multisite-domaine.fr", /* Shared cookie for subdomain website */
+
+  "readmoreLink": "/cookiespolicy", /* Change the default readmore link pointing to tarteaucitron.io */
+  
+  "mandatory": false /* Show a message about mandatory cookies */
+});
+tarteaucitron.user.gtagUa = '{{ . }}';
+tarteaucitron.user.gtagMore = function () { /* add here your optionnal gtag() */ };
+(tarteaucitron.job = tarteaucitron.job || []).push('gtag');
 </script>
 {{ end }}
