--- a/themes/educenter-hugo/layouts/contact/list.html
+++ b/themes/educenter-hugo/layouts/contact/list.html
@@ -9,7 +9,7 @@
       </div>
     </div>
     <div class="row">
-      <div class="col-lg-7 mb-4 mb-lg-0">
+      <!--<div class="col-lg-7 mb-4 mb-lg-0">
         <form action="{{ .Site.Params.contact_form_action | safeURL }}" method="POST">
           <input type="text" class="form-control mb-3" id="name" name="name" placeholder="Your Name">
           <input type="email" class="form-control mb-3" id="mail" name="mail" placeholder="Your Email">
@@ -17,11 +17,14 @@
           <textarea name="message" id="message" class="form-control mb-3" placeholder="Your Message"></textarea>
           <button type="submit" value="send" class="btn btn-primary">{{ i18n "send" }}</button>
         </form>
-      </div>
+      </div>-->
       <div class="col-lg-5 content">
         {{ .Content }}
-        <a href="tel:{{ .Site.Params.mobile }}" class="text-color h5 d-block">{{ .Site.Params.mobile }}</a>
+        <a href="tel:{{ .Site.Params.phone }}" class="text-color h5 d-block">{{ .Site.Params.phone }} (What's app!)</a> 
         <a href="mailto:{{ .Site.Params.email }}" class="mb-5 text-color h5 d-block">{{ .Site.Params.email }}</a>
+        <a href="http://m.me/qori.france" class="mb-5 text-color h5 d-block">Messenger</a>
+        <a href="https://www.facebook.com/qori.france" class="mb-5 text-color h5 d-block">Facebook</a>
+        <a href="https://www.linkedin.com/company/qori-france" class="mb-5 text-color h5 d-block">LinkedIn</a>
         <p>{{ .Site.Params.address | markdownify }}</p>
       </div>
     </div>
