--- a/src/pages/pages/[slug].astro
+++ b/src/pages/pages/[slug].astro
@@ -1,5 +1,5 @@
 ---
-import BaseLayout from '../../../layouts/BaseLayout.astro';
+import BaseLayout from '../../layouts/BaseLayout.astro';
 import { getCollection } from 'astro:content';
 
 export async function getStaticPaths() {
@@ -9,18 +9,17 @@ export async function getStaticPaths() {
     .filter(
       (p) =>
         p.data.path &&
-        p.data.lang === 'fr' &&
+        p.data.lang === 'es' &&
         !p.data.path.includes('/') &&
         !topLevel.includes(p.data.path)
     )
     .map((entry) => ({
-      params: { lang: 'fr' as const, slug: entry.data.path! },
+      params: { slug: entry.data.path! },
       props: { entry },
     }));
 }
 
 const { entry } = Astro.props;
-const { lang, slug } = Astro.params;
 const page = entry;
 const { Content } = await page.render();
 ---
@@ -28,7 +27,7 @@ const { Content } = await page.render();
 <BaseLayout
   title={page.data.title}
   description={page.data.description}
-  lang={lang!}
+  lang="es"
   isHome={false}
   pageTitle={page.data.title}
   pageDescription={page.data.description}
