--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -2,6 +2,7 @@
 import { siteConfig } from '../config';
 import { getMenu } from '../data/menu';
 import { t } from '../i18n/translations';
+import { localeBaseWithSlash, localePath } from '../utils/locale';
 
 interface Props {
   lang: string;
@@ -9,7 +10,7 @@ interface Props {
 
 const { lang } = Astro.props;
 const menu = getMenu(lang);
-const baseUrl = `/${lang}/`;
+const baseUrl = localeBaseWithSlash(lang);
 const mainLinks = menu.filter((m) => !m.children || m.children.length === 0);
 ---
 
@@ -31,7 +32,7 @@ const mainLinks = menu.filter((m) => !m.children || m.children.length === 0);
           <ul class="list-unstyled">
             {mainLinks.map((item) => (
               <li class="mb-3">
-                <a class="text-color" href={`/${lang}/${item.URL}/`}>
+                <a class="text-color" href={localePath(lang, item.URL)}>
                   {item.name}
                 </a>
               </li>
