--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -8,7 +8,7 @@ import BaseLayout from '../layouts/BaseLayout.astro';
         <div class="col-12 text-center">
           <h1>404</h1>
           <p>Page non trouvée / Página no encontrada</p>
-          <a href="/es/" class="btn btn-primary">Accueil / Inicio</a>
+          <a href="/" class="btn btn-primary">Accueil / Inicio</a>
         </div>
       </div>
     </div>
