--- a/src/components/PageHeader.astro
+++ b/src/components/PageHeader.astro
@@ -16,7 +16,7 @@ const bg = bgImage || '/images/backgrounds/page-title.jpg';
 
 <section
   class="page-title-section overlay"
-  style={`background-image: url('${bg}'), url('/images/backgrounds/page-title.jpg');`}
+  style={`background-image: url('${encodeURI(bg)}'), url('/images/backgrounds/page-title.jpg');`}
 >
   <div class="container">
     <div class="row">
