--- a/src/pages/[lang]/index.astro
+++ b/src/pages/[lang]/index.astro
@@ -138,7 +138,7 @@ const firstSlideBg = firstSlide?.bg_image ?? homepage.slider.bg_image;
                 {post.data.image && (
                   <img
                     class="card-img-top rounded-0"
-                    src={post.data.image.startsWith('/') ? post.data.image : `/${post.data.image}`}
+                    src={encodeURI(post.data.image.startsWith('/') ? post.data.image : `/${post.data.image}`)}
                     alt={post.data.title}
                   />
                 )}
