--- a/src/components/Head.astro
+++ b/src/components/Head.astro
@@ -11,31 +11,34 @@ interface Props {
 const { title, description, lang } = Astro.props;
 const fullTitle = title ? `${title} | ${siteConfig.title}` : siteConfig.title;
 const themeVars = `:root { --primary-color: ${siteConfig.primaryColor}; --nav-color: ${siteConfig.navColor}; }`;
+const gaId = siteConfig.googleAnalyticsId ?? '';
+const gaScript = `(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+ga('create','${gaId}','auto');ga('send','pageview');`;
 ---
 
 <meta charset="utf-8" />
 <title>{fullTitle}</title>
 <style is:global set:html={themeVars} />
-<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
 <meta name="description" content={description || siteConfig.description} />
 <meta name="author" content={siteConfig.author} />
 
-{siteConfig.plugins.css.map((p) => (
-  <link rel="stylesheet" href={p.link} />
-))}
+<link rel="stylesheet" href={siteConfig.plugins.css[0].link} />
+<link rel="stylesheet" href={siteConfig.plugins.css[1].link} media="print" onload="this.media='all'" />
+<link rel="stylesheet" href={siteConfig.plugins.css[2].link} media="print" onload="this.media='all'" />
+<link rel="stylesheet" href={siteConfig.plugins.css[3].link} media="print" onload="this.media='all'" />
 
 <link rel="preconnect" href="https://fonts.googleapis.com" />
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+<link rel="preconnect" href="https://cdn.jsdelivr.net" />
+<link rel="preconnect" href="https://code.jquery.com" />
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" />
 <link rel="shortcut icon" href="/images/favicon.png" type="image/x-icon" />
 <link rel="icon" href="/images/favicon.png" type="image/x-icon" />
 
 {siteConfig.googleAnalyticsId && (
-  <script is:inline>
-    {`(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-    })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-    ga('create','${siteConfig.googleAnalyticsId}','auto');ga('send','pageview');`}
-  </script>
+  <script is:inline set:html={gaScript} />
 )}
