--- a/src/components/Preloader.astro
+++ b/src/components/Preloader.astro
@@ -4,6 +4,6 @@ import { siteConfig } from '../config';
 
 {siteConfig.preloader.enable && (
   <div class="preloader">
-    <img src={siteConfig.preloader.preloader} alt="preloader" />
+    <img src={siteConfig.preloader.preloader} alt="preloader" width="405" height="200" />
   </div>
 )}
