--- a/src/pages/[lang]/contact.astro
+++ b/src/pages/[lang]/contact.astro
@@ -21,14 +21,10 @@ const { Content } = await page.render();
         <div class="col-12">
           <div class="content">
             <Content />
-            <p class="mt-4">
-              <a href={siteConfig.contact.formAction} class="btn btn-primary" target="_blank" rel="noopener">
-                {lang === 'fr' ? 'Réserver une consultation' : 'Reservar consulta'}
-              </a>
             </p>
             <p>
-              <strong>Email:</strong> <a href={`mailto:${siteConfig.email}`}>{siteConfig.email}</a><br />
-              <strong>{lang === 'fr' ? 'Téléphone' : 'Teléfono'}:</strong> <a href={`tel:${siteConfig.phone}`}>{siteConfig.phone}</a>
+              <strong>Email&nbsp;:</strong>&nbsp;<span set:html={siteConfig.email}/><br />
+              <strong>{lang === 'fr' ? 'Téléphone' : 'Teléfono'}&nbsp;:</strong>&nbsp;<span set:html={siteConfig.phone}/>
             </p>
           </div>
         </div>
